# Land-Registry

./: .gitignore  README.md
backend/: app.py  main.py  pyproject.toml  render.yaml  requirements.txt
backend/routes/: __init__.py  auth.py  parcels.py  reconciliation.py  search.py
backend/services/: __init__.py  auth_service.py  data_service.py  matching_service.py
data/spatial/: parcel_attributes.csv  villages.geojson
data/textual/: land_records.csv
docs/: API_DOCUMENTATION.md  DATA_SCHEMA.md  DEPLOYMENT_GUIDE.md  SAMPLE_RECONCILIATION_REPORT.md  USER_GUIDE.md
frontend/: index.html  styles.css
frontend/js/: api.js  app.js  authManager.js  config.js  editManager.js  mapManager.js  reportManager.js  searchManager.js
